--- a/landingpage/css/main.scss
+++ b/landingpage/css/main.scss
@@ -1770,6 +1770,19 @@ html {
     }
 }
 
+#advise-iframe {
+    width: 100%;
+    height: 622px;
+    #root {
+        .application {
+            background: red;
+            &>div {
+                width: 100%;
+            }
+        }
+    }
+}
+
 #bloomberg {
     background: url(../imgs/bg-bomber.png) no-repeat;
     background-position: center;
